--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,18 +5,20 @@
 <table>
   <thead>
     <tr>
+      <th>Userid</th>
       <th>Username</th>
       <th>Title</th>
       <th>Text</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-<h1> @user <%= @user%></h1>
+<h1> @user <%= current_user.id%></h1>
   <tbody>
     <% @posts.each do |post| %>
-      <% if @user == post.usert_id %>
+      <% if current_user.id == post.user_id %>
         <tr>
           <td><%= post.user_id %></td>
+          <td><%= @user.name %></td>
           <td><%= post.title %></td>
           <td><%= post.text %></td>
           <td><%= link_to 'Show', post %></td>
